Done comparison and status quo

--- a/cover/vietat.tex
+++ b/cover/vietat.tex
@@ -21,6 +21,10 @@
     HTTPS & Hypertext Transfer Protocol \\
     SQL & Ngôn ngữ truy vấn dữ liệu \\
     CSDL & Cơ sở dữ liệu \\
-CSRF & Cross-site Request Forgery \\
+    LLMs & Large Language Models \\
+    RS & Recommender Systems \\
+    API & Application Programming Interface \\
+    UI & User Interface \\
+    CSRF & Cross-site Request Forgery \\
     \hline
 \end{tabular}
