test fe for register, log in, player, search, favorite, history and profile

--- a/cover/contribution.tex
+++ b/cover/contribution.tex
@@ -19,7 +19,7 @@ Bảng dưới đây thể hiện công việc và nội dung báo cáo từng t
     \hline
     3 & Trần Trung Hậu & 25 & Frontend & \\
     \hline
-    4 & Đoàn Minh Hoàng & 25 & Thiết kế giao diện và xử lí logic Frontend cho màn hình đăng nhập, đăng kí, thông tin người dùng, tìm kiếm và danh mục bài hát yêu thích, kiểm thử giao diện đăng nhập, đăng kí & Chương 4(phần 2.1), Chương 6(phần 1) \\
+    4 & Đoàn Minh Hoàng & 25 & Thiết kế giao diện và xử lí logic Frontend cho màn hình đăng nhập, đăng kí, thông tin người dùng, tìm kiếm và danh mục bài hát yêu thích, kiểm thử giao diện đăng nhập, đăng kí & Chương 4(phần 2.1), Chương 6(phần 1, phần 2) \\
     \hline
 \end{tabular}
 
