dinhtran: forgot password, logout sequence diagram

--- a/main.tex
+++ b/main.tex
@@ -104,8 +104,8 @@
 \floatname{algorithm}{Thuật toán}
 \makeatletter
 \renewcommand\@biblabel[1]{[#1]}
-\renewcommand\harvardyearleft{\unskip~(}
-\renewcommand\harvardyearright{\unskip )}
+\renewcommand\harvardyearleft{\unskip~()}
+\renewcommand\harvardyearright{\unskip ()}
 \makeatother
 \renewcommand{\baselinestretch}{1.4}
 \flushbottom
